# CythonPEG

./: .gitignore  README.md  cython_peg.py  main.py  pyproject.toml  test.py
examples/: example1.pyx  example2.pyx
src/cythonpeg/: __init__.py  definitions.py  entrypoints.py  tree2string.py  utilities.py
tests/: test_all.py
tests/cython/: class_a.pyi  class_a.pyx  class_b.pyi  class_b.pyx  class_c.pyi  class_c.pyx  enum_a.pyi  enum_a.pyx  external_a.pyi  external_a.pyx  function_a.pyi  function_a.pyx  function_b.pyi  function_b.pyx  function_c.pyi  function_c.pyx  function_d.pyi  function_d.pyx  function_e.pyi  function_e.pyx  function_f.pyi  function_f.pyx  imports_a.pyi  imports_a.pyx  struct_a.pyi  struct_a.pyx
usage/: examples.ipynb
